Kubernetes/runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-runner
  namespace: run2596
  labels:
    app: enterprise-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enterprise-runner
      cluster: run-2596
  template:
    metadata:
      labels:
        app: enterprise-runner
        cluster: run-2596
    spec:
      containers:
      - image: rundeckpro/runner:5.7.0
        imagePullPolicy: Always
        name: enterprise-runner
      restartPolicy: Always
