Kubernetes/mysql.yaml
---
## MySQL Service

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: run2596
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql
  type: LoadBalancer

---
## MySQL Deploy

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: run2596
  labels:
    app: mysql
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
