Kubernetes/rundeck.yaml
---
## Rundeck Service

apiVersion: v1
kind: Service
metadata:
  # a custom shortened service name works around a limitation
  # in the ALB: the target group name is limited in length
  # (we use the environment and app labels to identify the deployment)
  name: rundeckpro-cluster
  namespace: run2596
  labels:
    app: rundeckpro-cluster
    environment: support
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: run2596-rba
    service.beta.kubernetes.io/azure-load-balancer-resource-group: RUN-2596
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4440
      protocol: TCP
  selector:
    app: rundeckpro-cluster
#  externalTrafficPolicy: Local
#  sessionAffinity: ClientIP

---
## Rundeck Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rundeckpro-cluster-ingress
  namespace: run2596
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - backend:
          service:
            name: rundeckpro-cluster
            port:
              number: 80
        path: /
        pathType: Prefix

---
## Rundeck Deploy

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeckpro-cluster
  namespace: run2596
  labels:
    app: rundeckpro-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeckpro-cluster
  template:
    metadata:
      labels:
        app: rundeckpro-cluster
    spec:
      containers:
      - name: rundeckpro
        image: rundeckpro/enterprise:5.5.0
        # volumeMounts:
        #  - mountPath: /home/rundeck/server/config/realm.properties
        #    name: realm
        #    subPath: realm.properties
        ports:
        - containerPort: 4440
        readinessProbe:
          tcpSocket:
            port: 4440
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 10
          successThreshold: 3
        resources:
          requests:
            cpu: 0
          limits:
            memory: 2G
            cpu: 2
            ephemeral-storage: 4G
      # volumes:
      # - name: realm
      #   secret:
      #     secretName: realm-properties
      #     items:
      #     - key: realm.properties
      #       path: realm.properties
